# youzi-robot

./: MANIFEST.in  README.md  pyproject.toml
examples/: dynamixel_gym_leader.py  dynamixel_mujoco_leader.py  gym_manipulation.py  gym_manipulation_img_multi.py  gym_manipulation_sb3.py  hdf5_mujoco.py  hdf5_record.py  lerobotdataset_load.py  lerobotdataset_save.py  mujoco_ctrl_range.py  mujoco_interactive_simulation.py  mujoco_simple_invk.py  rl_zoo3.sh  simple.py  teleoperate_leader_lerobot.py  teleoperate_simulated_robot.py
tests/: test_env.py
youzi_robot/: __init__.py
youzi_robot/assets/low_cost_robot_6dof/: follower.xml
youzi_robot/envs/: lift_cube_env.py  pick_place_cube_env.py  push_cube_env.py  push_cube_loop_env.py  reach_cube_env.py  stack_two_cubes_env.py  teleoperation_calibrate.py  teleoperation_record.py
