[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youzi-robot"
version = "0.1.0"
description = "Gymnasium environments for a low-cost robot, repackaged as youzi_robot."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "YouziXie", email = "xxxunhao@163.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gymnasium>=0.29",
    "mujoco>=3.0",
    "numpy>=1.23",
    "PyOpenGL==3.1.1a1",
]

[project.urls]
Homepage = "https://github.com/xxunhao/youzi-robot"
Repository = "https://github.com/xxunhao/youzi-robot"
Issues = "https://github.com/xxunhao/youzi-robot/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["youzi_robot*"]

[tool.setuptools.package-data]
youzi_robot = [
    "assets/*.md",
    "assets/low_cost_robot_6dof/*.xml",
    "assets/low_cost_robot_6dof/follower_meshes/*.STL",
    "assets/low_cost_robot_6dof/follower_meshes/*.stl",
]

[tool.ruff]
line-length = 119
lint.extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
